--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -121,6 +121,7 @@ img {
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
+  z-index: 100000;
   background-color: var(--dark-color-lighten);
 }
 
@@ -282,7 +283,7 @@ img {
 .sneaker__name, .sneaker__price {
   font-size: var(--h2-font-size);
   letter-spacing: .1rem;
-  font-weight: var(--font-semi-bold);
+  font-weight: var(--font-bold);
 }
 .sneaker__price {
   margin-bottom: var(--mb-4);
@@ -326,13 +327,89 @@ img {
 }
 
 /*===== WOMEN SNEAKERS =====*/
-
+.women__container {
+  row-gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+}
 
 /*===== OFFER =====*/
-
+.offer__container {
+  grid-template-columns: 55% 45%;
+  column-gap: 0;
+  background-color: var(--dark-color-lighten);
+  border-radius: .5rem;
+  justify-content: center;
+}
+.offer__data {
+  padding: 4rem 0 4rem 1.5rem;
+}
+.offer__title {
+  font-size: var(--bigger-font-size);
+  margin-bottom: .25rem;
+}
+.offer__description {
+  margin-bottom: var(--mb-3);
+}
+.offer__img {
+  width: 153px;
+}
 
 /*===== NEW COLLECTION  =====*/
-
+.new__container {
+  row-gap: 2rem;
+}
+.new__mens {
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  background-color: var(--dark-color-lighten);
+  border-radius: .5rem;
+  padding: 2rem;
+}
+.new__mens-img {
+  width: 276px;
+  margin-bottom: var(--mb-3);
+}
+.new__title {
+  font-size: var(--bigger-font-size);
+  margin-bottom: .25rem;
+}
+.new__price {
+  display: block;
+  margin-bottom: var(--mb-3);
+}
+.new__sneaker {
+  display: grid;
+  gap: 1.5rem;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+}
+.new__sneaker-card {
+  position: relative;
+  padding: 3.5rem 1.5rem;
+  background-color: var(--dark-color-lighten);
+  border-radius: .5rem;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+.new__sneaker-img {
+  width: 220px;
+}
+.new__sneaker-overlay {
+  position: absolute;
+  left: 0;
+  bottom: -100%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  background-color: rgba(138,138,138,.3);
+  transition: .3s;
+}
+.new__sneaker-card:hover  .new__sneaker-overlay {
+  bottom: 0;
+}
 
 /*===== NEWSLETTER =====*/
 
